--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="{% url 'task_main' %}">Home</a></li>
                 <li><a href="{% url 'todo:task_list' %}">Tasks</a></li>
+                <li><a href="{% url 'todo:task_overdue_list' %}">Overdue Tasks</a></li>
                 <li><a href="{% url 'todo:task_completed_list' %}">Completed Tasks</a></li>
             </ul>
         </nav>
