Added functional test

--- a/todo/templates/todo/task_list.html
+++ b/todo/templates/todo/task_list.html
@@ -16,7 +16,7 @@
         <a href="{{ task.get_delete_url }}">Delete</a>
     </li>
     {% empty %}
-    <li>There is no task to do.</li>
+    <li>There is no task in this list.</li>
     {% endfor %}
 </ul>
 {% endblock %}
