--- a/todo/templates/todo/task_detail.html
+++ b/todo/templates/todo/task_detail.html
@@ -13,8 +13,8 @@
 <p> Completed: {{ task.completed }}</p>
 <div>
 <ul>
-<li><a href="{{ task.get_update_url }}">Edit</a></li>
-<li><a href="{{ task.get_delete_url }}">Delete</a></li>
+<li><a href="">Edit</a></li>
+<li><a href="">Delete</a></li>
 </div>
 </ul>
 {% endblock %}
