Add CRUD for task, tasklist

--- a/todo/templates/todo/task_detail.html
+++ b/todo/templates/todo/task_detail.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block content %}
-<h3> {{ task.name }} </h3>
+<h1> {{ task.name }} </h1>
+<ul>
+    <li><a href="{{ task.get_update_url }}">Edit</a></li>
+    <li><a href="{{ task.get_delete_url }}">Delete</a></li>
+</ul>
 <p> {{ task.text }} </p>
 {% if task.due %}
     <p> Due: {{ task.due|date:"H:i l jS N" }}</p>
@@ -13,8 +17,6 @@
 <p> Completed: {{ task.completed }}</p>
 <div>
 <ul>
-<li><a href="">Edit</a></li>
-<li><a href="">Delete</a></li>
 </div>
 </ul>
 {% endblock %}
