--- a/todo/templates/todo/task_main.html
+++ b/todo/templates/todo/task_main.html
@@ -13,7 +13,7 @@
         <input type="submit" value="Add Task"/>
     </form>
 </div>
-<h2>All tasks</h2>
+<h2>Incompleted tasks</h2>
 <ul id="id_task_list">
     {% for task in task_list %}
     <li>
