--- a/todo/templates/todo/tasklist_list.html
+++ b/todo/templates/todo/tasklist_list.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1>Todo Lists</h1>
 <ul>
-    <li><a href="{% url 'todo:tasklist_create' %}">Add a New List</a></li>
+    <li><a href="{% url 'todo:tasklist_create' %}">Start a New List</a></li>
 </ul>
 <ul>
     {% for list in tasklist_list %}
