--- a/todo/templates/todo/tasklist_update_form.html
+++ b/todo/templates/todo/tasklist_update_form.html
@@ -8,6 +8,6 @@
 <form action="{{ tasklist.get_update_url }}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Edit List"/>
+    <input type="submit" value="Save Change"/>
 </form>
 {% endblock %}
