changed todo test

--- a/todo/templates/todo/tasklist_detail.html
+++ b/todo/templates/todo/tasklist_detail.html
@@ -7,7 +7,7 @@
 <h1>List: {{ tasklist.name|title }}</h1>
 <ul>
     <li>
-        <a href="{{ tasklist.get_task_create_url }}">New Task</a>
+        <a href="{{ tasklist.get_task_create_url }}">Add a New Task</a>
     </li>
     <li>
         <a href="{{ tasklist.get_update_url }}">Edit List</a>
