--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,102 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-            {% block title %}
-            Togedo
-            {% endblock %}
-        </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li><a href="{% url 'task_main' %}">Home</a></li>
-                <li><a href="{% url 'todo:tasklist_list' %}">Lists</a></li>
-            </ul>
-        </nav>
-        {% block content %}
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+        {% block title %}
+        Togedo
         {% endblock %}
-    </body>
+    </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+</head>
+
+<body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+                Togedo!
+            </a>
+
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="{% url 'task_main' %}">
+                    Home
+                </a>
+
+                <a class="navbar-item" href="{% url 'todo:tasklist_list' %}">
+                    Lists
+                </a>
+                
+                <!-- 
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">
+                        More
+                    </a>
+
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item">
+                            About
+                        </a>
+                        <a class="navbar-item">
+                            Jobs
+                        </a>
+                        <a class="navbar-item">
+                            Contact
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item">
+                            Report an issue
+                        </a>
+                    </div>
+                </div>
+                -->
+            </div>
+            
+            <!-- 
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a class="button is-primary">
+                            <strong>Sign up</strong>
+                        </a>
+                        <a class="button is-light">
+                            Log in
+                        </a>
+                    </div>
+                </div>
+            </div>
+             -->
+
+        </div>
+    </nav> <!----------------------- end nav ----------------->
+
+    <section class="section">
+        <div class="container">
+            {% block content %}
+
+            {% endblock %}
+        </div>
+
+    </section>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Togedo</strong> by <a href="https://jgthms.com">Seon Jeon</a>. 
+          </p>
+        </div>
+      </footer>
+</body>
+
 </html>
