--- a/todo/templates/todo/task_update_form.html
+++ b/todo/templates/todo/task_update_form.html
@@ -60,7 +60,7 @@
                   <input type="submit" class="button is-link" value="Save Change"/>
                 </div>
                 <div class="control">
-                  <a class="button is-link is-light" href="">Cancel</a>
+                  <a class="button is-link is-light" href="{{ task.tasklist.get_absolute_url }}">Cancel</a>
                 </div>
             </div>
         </form>
