--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="{% url 'task_main' %}">
+                <a class="navbar-item" href="">
                     Home
                 </a>
 
