--- a/todo/templates/todo/tasklist_form.html
+++ b/todo/templates/todo/tasklist_form.html
@@ -5,9 +5,36 @@
 {% endblock %}
 
 {% block content %}
-<form action="{% url 'todo:tasklist_create' %}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Add List"/>
-</form>
+<div class="columns">
+    <div class="column is-offset-2 is-8">
+        <form action="{% url 'todo:tasklist_create' %}" method="post">
+            {% csrf_token %}
+            <div class="field">
+                <label for="{{ form.name.id_for_label }}" class="label">Name</label>
+                <div class="control">
+                  {{ form.name }}
+                </div>
+                {% if form.name.errors %}
+                <ul>
+                    {% for error in form.name.errors %}
+                        <li class="help is-danger">{{ error|escape }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+            <div class="field is-grouped is-grouped-right">
+                <div class="control">
+                    <button type="submit" class="button is-link" value="Add List">
+                        Add List
+                    </button>
+                </div>
+                <div class="control">
+                    <button class="button is-link is-light">
+                        <a href="{% url 'todo:tasklist_list' %}">Cancel</a>
+                    </button> 
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
