--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
           <p>
-            <strong>Togedo</strong> by <a href="https://jgthms.com">Seon Jeon</a>. 
+            <strong>Togedo</strong> by S Jeon. 
           </p>
         </div>
       </footer>
